# demo_series

./: README.md
pybind11/: CMakeLists.txt  README.md  setup.py  test.py
pybind11/inc/: init.hpp  main.hpp  math_utils.hpp
pybind11/src/: bind.cpp  main.cpp  math_utils.cpp
pybind11/src/libs/: math_utils.cpp
pybind11/src/modules/: init.cpp  math.cpp
