CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(TEST_PYBIND11)

FIND_PACKAGE(pybind11 REQUIRED)
SET(EXPORT_COMPILE_COMMANDS 1)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES("/usr/include")
INCLUDE_DIRECTORIES("/usr/include/python3.10")

AUX_SOURCE_DIRECTORY(src TEST_PYBIND11_SRC)

PYBIND11_ADD_MODULE(math_utils ${TEST_PYBIND11_SRC}) 
